test/types/range/vass/offset-4.good
offset-4.chpl:3: error: can't invoke 'offset' on an unstrided range with no low bound
