test/types/range/vass/offset-4.chpl
var r = ..0;
writeln(r);
var q = r.offset(3);
writeln(q);
